--- a/styles/style.scss
+++ b/styles/style.scss
@@ -366,8 +366,8 @@ footer{
 
         a.report{
             position: absolute;
-            height: 11vw;
-            width: 11vw;
+            height: 5rem;
+            width: 5rem;
             bottom: 1.5rem;
             left: 50%;
             transform: translate(-50%,0);
